# machowriter

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
includes/: command.hpp  lc_build_version.hpp  lc_data_in_code.hpp  lc_dyld_info_only.hpp  lc_dysymtab.hpp  lc_load_dylib.hpp  lc_load_dylinker.hpp  lc_main.hpp  lc_segment.hpp  lc_symtab.hpp  lc_uuid.hpp  mach-o.hpp  mach-o_reloc.hpp  util.hpp  version.hpp
machowriter.xcodeproj/: project.pbxproj
machowriter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
machowriter.xcodeproj/project.xcworkspace/xcuserdata/paul.xcuserdatad/: UserInterfaceState.xcuserstate
machowriter.xcodeproj/xcshareddata/xcschemes/: machowriter.xcscheme
machowriter.xcodeproj/xcuserdata/paul.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
machowriter.xcodeproj/xcuserdata/paul.xcuserdatad/xcschemes/: xcschememanagement.plist
sources/: command.cpp  lc_build_version.cpp  lc_data_in_code.cpp  lc_dyld_info_only.cpp  lc_dysymtab.cpp  lc_load_dylib.cpp  lc_load_dylinker.cpp  lc_main.cpp  lc_segment.cpp  lc_symtab.cpp  lc_uuid.cpp
